# coding-agent

./: .env.example  Cargo.toml  LICENSE  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: main.rs
src/components/: config.rs  conversation.rs  dotenv.rs  llm.rs  mod.rs  ollama.rs
