[package]
name = "coding-agent"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-logger = "0.1"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
